Fix overlap

--- a/src/app/shared/forms/planet-markdown-textbox.scss
+++ b/src/app/shared/forms/planet-markdown-textbox.scss
@@ -25,6 +25,10 @@ planet-markdown-textbox {
     min-height: 15vh;
   }
 
+  .CodeMirror.CodeMirror-fullscreen {
+    box-sizing: border-box;
+  }
+
   .CodeMirror.CodeMirror-fullscreen, .CodeMirror-fullscreen .CodeMirror-scroll {
     height: 100%;
   }
